--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.10.13"
+    "@astrojs/tailwind": "^4.0.0",
+    "astro": "^2.10.13",
+    "bootstrap-icons": "^1.10.5",
+    "tailwindcss": "^3.3.3"
   }
 }
